# ChargepointPlacementFinder

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clang-tidy.yml  cmake-single-platform.yml
src/: AlgorithmFunctions.c  AlgorithmFunctions.h  CMakeLists.txt  Superdupercprogram.cpp  Superdupercprogram.h  algorithm_functions.c  algorithm_functions.h  example_parser.c  graph_functions.c  graph_functions.h  graph_theory.h  insult  main.c  print_function.c  print_function.h  sample_network.c  sample_network.h
src/algorithm/: CMakeLists.txt  algorithm_functions.c  algorithm_functions.h
src/console_output/: CMakeLists.txt  print_function.c  print_function.h
src/dataparser/: CMakeLists.txt  csv_parser.c  csv_parser.h  edge_list.csv  example_edge_list.csv  example_node_list.csv  node_list.csv  parse_debug.c  parse_debug.h
src/graph/: CMakeLists.txt  graph_functions.c  graph_functions.h
src/sample_network/: CMakeLists.txt  sample_network.c  sample_network.h
test/: CMakeLists.txt  test_main.c
test/algorithm/: CMakeLists.txt  test_algorithm.c  test_algorithm.h
test/dataparser/: CMakeLists.txt  test_csv_parser.c  test_csv_parser.h  test_edges.csv  test_nodes.csv
